k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medcat-ingress
spec:
  ingressClassName: public
  rules:
    - host: medcat-team1.213-165-209-28.nip.io
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: medcat-backend
                port:
                  number: 8000
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: medcat-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: medcat-frontend
                port:
                  number: 80
